Fixed nav collapse display and added responsive iframe wrapper, audio .svg controls, and image alt attributes

--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,8 @@ figcaption {
 
 .page {
   min-height: 100%;
-  padding-top: calc( 40px + 2.5% );
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
 
 /******************************
@@ -51,6 +52,23 @@ Landing
 .jumbotron {
   background-color: #fdfdfd;
   margin: 0;
+}
+
+#audioland {
+  width: 100px;
+  height: 100px;
+}
+
+.lplay,
+.lpause:hover,
+.lpause:focus {
+  opacity: 1;
+}
+
+.lpause,
+.lplay:hover,
+.lplay:focus {
+  opacity: 0.5;
 }
 
 h3 {
@@ -69,36 +87,44 @@ Navigation
   position: fixed;
   top: 0;
   min-width: 100%;
-  height: 5%;
-  min-height: 40px;
+  height: 46px;
   z-index: 500;
   background-color: #eff1f2;
+  padding: 0;
+}
+
+#return {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin-left: 0.5rem;
 }
 
 .navbar-toggler {
   height: 36px;
+  margin-right: 0.5rem;
 }
 
 .navbar-toggler-icon {
   height: 27px;
 }
 
+.navbar-collapse ul {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 0 0 0 1%;
+}
+
 .navbar-nav {
   padding-right: 0;
   margin-right: 0;
-}
-
-#return {
-  font-size: 1.5rem;
-  font-weight: 500;
+  background-color: #eff1f2;
 }
 
 #foot {
   position: fixed;
   bottom: 0;
   min-width: 100%;
-  height: 5%;
-  min-height: 40px;
+  height: 46px;
   z-index: 500;
   background-color: #eff1f2;
 }
@@ -109,6 +135,23 @@ Navigation
 
 .footlink {
   color: #050505;
+}
+
+#audiofoot {
+  width: 30px;
+  height: 30px;
+}
+
+.fplay,
+.fpause:hover,
+.fpause:focus {
+  opacity: 0.7;
+}
+
+.fpause,
+.fplay:hover,
+.fplay:focus {
+  opacity: 0.5;
 }
 
 /******************************
@@ -199,6 +242,43 @@ Events
 /******************************
 Media
 ******************************/
+
+.videoWrapper {
+	position: relative;
+	width: 320px;
+	height: 195px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media all and (min-width: 576px) {
+  .videoWrapper {
+  	width: 448px;
+  	height: 273px;
+  }
+}
+
+@media all and (min-width: 768px) {
+  .videoWrapper {
+  	width: 640px;
+  	height: 390px;
+  }
+}
+
+@media all and (min-width: 992px) {
+  .videoWrapper {
+  	width: 832px;
+  	height: 507px;
+  }
+}
+
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 /******************************
 Merch
